k8s/base/message-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: message-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: message-service
  template:
    metadata:
      labels:
        app: message-service
    spec:
      containers:
      - name: message-service
        image: mablinov2704/message-service:latest
        ports:
        - containerPort: 8082
        volumeMounts:
        - name: s3-storage
          mountPath: /mnt/s3-uploads
      volumes:
      - name: s3-storage
        persistentVolumeClaim:
          claimName: s3-pvc
